implement the option to download csv via api, removed loopback from network adapter list
